Revert "JUnit 5"