@@ -2,17 +2,19 @@ package dk.dbc.dataio.commons.types;
 
 import dk.dbc.commons.jsonb.JSONBContext;
 import dk.dbc.commons.jsonb.JSONBException;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
-import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 public class ChunkTest {
     private static final ChunkItem CHUNK_ITEM = ChunkItem.successfulChunkItem()
@@ -21,19 +23,19 @@ public class ChunkTest {
     private Chunk chunk;
     private final JSONBContext jsonbContext = new JSONBContext();
 
-    @BeforeEach
+    @Before
     public void newChunk() {
         chunk = new Chunk(1, 1L, Chunk.Type.PARTITIONED);
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void constructor_negativeJobId_throws() {
-        assertThrows(IllegalArgumentException.class, () -> new Chunk(-1, 1L, Chunk.Type.PARTITIONED));
+        new Chunk(-1, 1L, Chunk.Type.PARTITIONED);
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void constructor_negativeChunkId_throws() {
-        assertThrows(IllegalArgumentException.class, () -> new Chunk(1, -1L, Chunk.Type.PARTITIONED));
+        new Chunk(1, -1L, Chunk.Type.PARTITIONED);
     }
 
     @Test
@@ -44,14 +46,14 @@ public class ChunkTest {
         assertThat("type", chunk.getType(), is(Chunk.Type.PARTITIONED));
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void insertItem_itemArgIsNull_throws() {
-        assertThrows(IllegalArgumentException.class, () -> chunk.insertItem(null));
+        chunk.insertItem(null);
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void insertItem_outOfOrderItemId_throws() {
-        assertThrows(IllegalArgumentException.class, () -> chunk.insertItem(ChunkItem.ignoredChunkItem().withId(1).withData("data")));
+        chunk.insertItem(ChunkItem.ignoredChunkItem().withId(1).withData("data"));
     }
 
     @Test
@@ -61,9 +63,9 @@ public class ChunkTest {
         assertThat("chunk has next items?", chunk.hasNextItems(), is(false));
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void insertItem_2arg_currentItemArgIsNull_throws() {
-        assertThrows(IllegalArgumentException.class, () -> chunk.insertItem(ChunkItem.UNDEFINED, CHUNK_ITEM));
+        chunk.insertItem(ChunkItem.UNDEFINED, CHUNK_ITEM);
     }
 
     @Test
@@ -82,10 +84,10 @@ public class ChunkTest {
         assertThat("chunk has next items?", chunk.hasNextItems(), is(true));
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void insertItem_2arg_nextItemIdDiffersFromCurrentItemId_throws() {
-        ChunkItem nextChunkItem = ChunkItem.successfulChunkItem().withId(1).withData("data");
-        assertThrows(IllegalArgumentException.class, () -> chunk.insertItem(CHUNK_ITEM, nextChunkItem));
+        final ChunkItem nextChunkItem = ChunkItem.successfulChunkItem().withId(1).withData("data");
+        chunk.insertItem(CHUNK_ITEM, nextChunkItem);
     }
 
     @Test
@@ -112,25 +114,25 @@ public class ChunkTest {
         assertThat("chunk has next items?", chunk.hasNextItems(), is(false));
     }
 
-    @Test
+    @Test(expected = IllegalArgumentException.class)
     public void addAllItems_2arg_listsDifferInSize_throws() {
-        ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
-        ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
-        assertThrows(IllegalArgumentException.class, () -> chunk.addAllItems(List.of(firstItem, secondItem), List.of(firstItem)));
+        final ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
+        final ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
+        chunk.addAllItems(Arrays.asList(firstItem, secondItem), Collections.singletonList(firstItem));
     }
 
     @Test
     public void chunk_iterator() {
-        ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
-        ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
-        ChunkItem thirdItem = ChunkItem.failedChunkItem().withId(2).withData("Third");
+        final ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
+        final ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
+        final ChunkItem thirdItem = ChunkItem.failedChunkItem().withId(2).withData("Third");
         chunk.insertItem(firstItem);
         chunk.insertItem(secondItem);
         chunk.insertItem(thirdItem);
 
         assertThat("chunk size", chunk.size(), is(3));
 
-        Iterator<ChunkItem> it = chunk.iterator();
+        final Iterator<ChunkItem> it = chunk.iterator();
         assertThat("chunk has first item", it.hasNext(), is(true));
         assertThat("first item", it.next(), is(firstItem));
         assertThat("chunk has second item", it.hasNext(), is(true));
@@ -142,15 +144,15 @@ public class ChunkTest {
 
     @Test
     public void convertToJsonAndBackAgain() throws JSONBException {
-        ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
-        ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
-        ChunkItem thirdItem = ChunkItem.failedChunkItem().withId(2).withData("Third");
+        final ChunkItem firstItem = ChunkItem.ignoredChunkItem().withId(0).withData("First");
+        final ChunkItem secondItem = ChunkItem.successfulChunkItem().withId(1).withData("Second");
+        final ChunkItem thirdItem = ChunkItem.failedChunkItem().withId(2).withData("Third");
         chunk.insertItem(firstItem);
         chunk.insertItem(secondItem);
         chunk.insertItem(thirdItem);
 
-        Chunk unmarshalledChunk = jsonbContext.unmarshall(jsonbContext.marshall(chunk), Chunk.class);
-        Iterator<ChunkItem> it = unmarshalledChunk.iterator();
+        final Chunk unmarshalledChunk = jsonbContext.unmarshall(jsonbContext.marshall(chunk), Chunk.class);
+        final Iterator<ChunkItem> it = unmarshalledChunk.iterator();
         assertThat("chunk has first item", it.hasNext(), is(true));
         assertThat("first item", it.next(), is(firstItem));
         assertThat("chunk has second item", it.hasNext(), is(true));
@@ -160,16 +162,33 @@ public class ChunkTest {
         assertThat("chunk has fourth item", it.hasNext(), is(false));
     }
 
-    @Test
-    public void unmarshallFromJsonWhichDoNotUpholdInvariant() {
+    @Test(expected = JSONBException.class)
+    public void unmarshallFromJsonWhichDoNotUpholdInvariant() throws JSONBException {
         final String illegalJson = "{\"jobId\":1,\"chunkId\":1,\"type\":\"PROCESSED\",\"items\":[{\"id\":1,\"data\":\"ZGF0YQ==\",\"status\":\"SUCCESS\"},{\"id\":0,\"data\":\"Second\",\"status\":\"SUCCESS\"}]}";
-        assertThrows(JSONBException.class, () -> jsonbContext.unmarshall(illegalJson, Chunk.class));
+        jsonbContext.unmarshall(illegalJson, Chunk.class);
     }
 
     @Test
     public void unmarshallFromJsonWithoutNext() throws JSONBException {
         final String json = "{\"jobId\":1,\"chunkId\":1,\"type\":\"PROCESSED\",\"items\":[{\"id\":0,\"data\":\"ZGF0YQ==\",\"status\":\"SUCCESS\", \"type\":[\"UNKNOWN\"],\"encoding\":\"UTF-8\"}]}";
-        Chunk chunk = jsonbContext.unmarshall(json, Chunk.class);
+        final Chunk chunk = jsonbContext.unmarshall(json, Chunk.class);
         assertThat(chunk, is(notNullValue()));
+    }
+
+    private void assertStatus(Chunk chunk, long itemIdToStatusMatch, ChunkItem.Status expectedStatus) {
+        final ChunkItem ITEM_NOT_FOUND = null;
+        ChunkItem itemToMatch = ITEM_NOT_FOUND;
+        for (ChunkItem item : chunk) {
+            if (item.getId() == itemIdToStatusMatch) {
+                itemToMatch = item;
+            }
+        }
+
+        if (itemToMatch == null) {
+            fail("Matching ChunkItem expected with itemId: " + itemIdToStatusMatch);
+        } else {
+            assertTrue(itemToMatch.getId() == itemIdToStatusMatch);
+            assertEquals(expectedStatus, itemToMatch.getStatus());
+        }
     }
 }
